--- a/FomoCryptoNews.Client/Views/Home/Index.cshtml
+++ b/FomoCryptoNews.Client/Views/Home/Index.cshtml
@@ -4,58 +4,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <!-- Sidebar -->
-        <nav class="col-md-3 col-lg-2 d-md-block sidebar collapse">
-            <div class="logo">
-                <span>FCN</span>
-            </div>
-            <h4 class="text-center mb-3">Fomo Crypto News</h4>
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#all-news">All News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#pending-news">Pending News</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!-- Main content -->
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div class="content">
-                <h2 class="mb-4">Dashboard</h2>
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <div>
-                        <label for="rowsPerPage">Rows per page:</label>
-                        <select id="rowsPerPage" class="form-select form-select-sm d-inline-block w-auto">
-                            <option value="10">10</option>
-                            <option value="25">25</option>
-                            <option value="50">50</option>
-                        </select>
-                    </div>
-                    <nav aria-label="Table navigation">
-                        <ul class="pagination" id="pagination"></ul>
-                    </nav>
-                </div>
-                <div class="table-responsive">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                        <tr>
-                            <th class="sortable" data-sort="id">Id</th>
-                            <th>Cover</th>
-                            <th class="sortable" data-sort="title">Title</th>
-                            <th class="sortable" data-sort="description">Description</th>
-                            <th class="sortable" data-sort="status">Status</th>
-                            <th class="sortable" data-sort="createdAt">Created At</th>
-                            <th>Actions</th>
-                        </tr>
-                        </thead>
-                        <tbody id="tableBody">
-                        <!-- Table rows will be dynamically inserted here -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </main>
+        @await Component.InvokeAsync("RightMenu")
+        @await Component.InvokeAsync("DashboardTable")
     </div>
 </div>
