--- a/FomoCryptoNews.Client/Pages/Components/DashboardTableView.cshtml
+++ b/FomoCryptoNews.Client/Pages/Components/DashboardTableView.cshtml
@@ -1,13 +1,14 @@
 ﻿@model List<FomoCryptoNews.Client.Models.NewsModel>
-<container>
+
     <table class="table">
-        <thead>
+        <thead class="table-light">
         <tr>
             <th scope="col">Id</th>
             <th scope="col">Cover</th>
             <th scope="col">Title</th>
             <th scope="col">Description</th>
             <th scope="col">Created At</th>
+            <th scope="col">Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -30,4 +31,3 @@
 
         </tbody>
     </table>
-</container>
