--- a/FomoCryptoNews.Client/Views/Home/Index.cshtml
+++ b/FomoCryptoNews.Client/Views/Home/Index.cshtml
@@ -2,9 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container-fluid">
-    <div class="row">
+<div class="row">
+    <div class="col-md-3">
         @await Component.InvokeAsync("RightMenu")
+    </div>
+    <div class="col-md-9">
         @await Component.InvokeAsync("DashboardTable")
     </div>
 </div>
