--- a/FomoCryptoNews.Client/Views/Shared/_Layout.cshtml
+++ b/FomoCryptoNews.Client/Views/Shared/_Layout.cshtml
@@ -12,12 +12,13 @@
     @* <link rel="stylesheet" href="~/css/styles.css" asp-append-version="true"/> *@
 </head>
 <body>
-
-@await Component.InvokeAsync("Header")
-
-@RenderBody()
-
-@await Component.InvokeAsync("Footer")
+<div class="container-fluid">
+    <div class="row">
+        @await Component.InvokeAsync("Header")
+        @RenderBody()
+        @await Component.InvokeAsync("Footer")
+    </div>
+</div>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
