[+] get paginated news from database

--- a/FomoCryptoNews.Client/Pages/Components/DashboardTableView.cshtml
+++ b/FomoCryptoNews.Client/Pages/Components/DashboardTableView.cshtml
@@ -1,5 +1,5 @@
 ﻿@using FomoCryptoNews.Client.Models
-@model List<FomoCryptoNews.Client.Models.NewsModel>
+@model List<NewsModel>
 
 <div class="container mt-5">
     <table class="table table-hover" id="newsTable">
