--- a/FomoCryptoNews.Client/Views/Home/Index.cshtml
+++ b/FomoCryptoNews.Client/Views/Home/Index.cshtml
@@ -7,6 +7,6 @@
         @await Component.InvokeAsync("RightMenu")
     </div>
     <div class="col-md-9">
-        @await Component.InvokeAsync("DashboardTable")
+        @await Component.InvokeAsync("DashboardTable", new {skip = 0, take = 5})
     </div>
 </div>
