--- a/FomoCryptoNews.Client/Pages/Components/RightMenuView.cshtml
+++ b/FomoCryptoNews.Client/Pages/Components/RightMenuView.cshtml
@@ -1,32 +1,32 @@
 ﻿<div class="d-flex flex-column flex-shrink-0 bg-light h-100 w-75" style="width: 200px;">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
     <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-    <span class="fs-4">Sidebar</span>
+    <span class="fs-4">Admin</span>
   </a>
   <hr>
   <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
       <a href="#" class="nav-link active" aria-current="page">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-        Home
+        All news
       </a>
     </li>
     <li>
       <a href="#" class="nav-link link-dark">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-        Dashboard
+        Approved news
       </a>
     </li>
-    <li>
+    <li>  
       <a href="#" class="nav-link link-dark">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-        Orders
+        Declined news
       </a>
     </li>
     <li>
       <a href="#" class="nav-link link-dark">
         <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-        Products
+        Deleted news
       </a>
     </li>
     <li>
